# clonellm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: release-pypi.yml  run-tests.yml
examples/: advanced_clone.py  advanced_clone_async.py  clone_with_memory.py  clone_with_memory_async.py  const.py  fit_and_update.py  fit_and_update_async.py  simple_clone.py  simple_clone_async.py  simple_clone_with_embedding.py  simple_clone_with_embedding_async.py  spacy_embeddings.py
src/clonellm/: __init__.py  _base.py  _prompt.py  _typing.py  core.py  embed.py  enums.py  memory.py  models.py  py.typed
src/me_llm/: __init__.py  _base.py  _prompt.py  _typing.py  core.py  main.py
tests/: conftest.py  test_core.py  test_embed.py  test_memory.py
