[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clonellm"
version = "0.3.0"
description = "Python package to create an AI clone of yourself using LLMs."
packages = [{ from = "src", include = "clonellm" }]
include = ["src/clonellm/py.typed"]
license = "MIT"
authors = ["Mehdi Samsami <mehdisamsami@live.com>"]
readme = "README.md"
keywords = ["python", "ai", "llm", "rag"]
repository = "https://github.com/msamsami/clonellm"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litellm = "^1.36.0"
langchain = "^0.1.17"
pydantic = {version = ">=2.8.0", python = ">=3.12.4"}
langchain-chroma = {version = "*", optional = true}
faiss-cpu = {version = "*", optional = true}

[tool.poetry.extras]
chroma = ["langchain-chroma"]
faiss = ["faiss-cpu"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
pytest-asyncio = "*"
ruff = "<1.0.0"
pre-commit = "*"
isort = "*"

[tool.mypy]
exclude=["tests", "examples"]
namespace_packages = false
files = ["src/clonellm/**/*.py"]
check_untyped_defs = true
disable_error_code = ["empty-body", "unused-ignore"]
strict = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "openai.lib.streaming",
    "opentelemetry.*",
    "google",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
line-length = 130

[tool.black]
line-length = 130

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
